# vizia-sample-browser

./: .gitignore  .test.vsb  .vsb  Cargo.toml  README.md  config.ron  styles.css
.github/workflows/: build.yaml  test.yaml
.vsb-meta/: .vsb-meta
resources/themes/: style.css
resources/translations/en-GB/: strings.ftl
resources/translations/en-US/: browser.ftl
resources/translations/es/: browser.ftl  strings.ftl
src/: app_data.rs  main.rs  svg.rs
src/data/: app_data.rs  browser.rs  browser_data.rs  config_data.rs  mod.rs  samples_data.rs  settings_data.rs  table_data.rs  tags.rs  tags_data.rs
src/database/: audio_file.rs  collection.rs  comparator.rs  connection.rs  error.rs  handler.rs  meta.rs  mod.rs  schema.sql  store.rs  tags.rs  test.rs
src/database/sqls/: clear.sql  schema.sql  test.sql
src/database/tests/: comparator.rs  get_audio_files.rs  get_collections.rs  get_tags.rs  insert.rs  local_query.rs  mod.rs  recursive_benchmark.rs  test.sql
src/dialogs/: about.rs  mod.rs  settings.rs
src/engine/: audio_data.rs  audio_stream.rs  mod.rs  sample_player.rs  utils.rs  waveform.rs
src/menus/: mod.rs
src/panels/: browser.rs  explorer.rs  mod.rs  samples.rs  sidebar.rs  tags.rs  wave.rs  waveview.rs
src/popup_menu/: mod.rs  popup_action.rs  popup_divisor.rs
src/state/: app_data.rs  browser.rs  mod.rs
src/views/: mod.rs  resizable_stack.rs  smart_table.rs  toggle_button.rs  waveview.rs
test_files/: .database.vsb
test_files/.vsb-meta/: .vsb-database
