[package]
name = "vizia-sample-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
vizia = {git = "https://github.com/vizia/vizia"}
# vizia = {path = "../vizia"}
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.177", features = ["derive"] }
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3