[package]
name = "vizia-sample-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
# vizia = {git = "https://github.com/vizia/vizia", branch = "views-update"}
vizia = {path = "../vizia"}
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.177", features = ["derive"] }
rand = "0.8.5"
ron = "0.8.0"
sha2 = "0.10.7"
base64ct = {version = "1.6.0", features = ["alloc"]}
itertools = "0.11.0"
fuzzy-matcher = "0.3.7"

[profile.dev.package."*"]
opt-level = 3
