[package]
name = "vizia-sample-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
vizia = {git = "https://github.com/vizia/vizia"}
# vizia = {path = "../vizia"}
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.177", features = ["derive"] }
rand = "0.8.5"
ron = "0.8.0"
sha2 = "0.10.7"
base64ct = {version = "1.6.0", features = ["alloc"]}
itertools = "0.13"
fuzzy-matcher = "0.3.7"
hound = "3.5.1"
cpal = "0.15"
basedrop = { git = "https://github.com/glowcoil/basedrop.git" }
ringbuf = "0.4"
strum = { version = "0.26", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"
image = {version = "0.25", default-features = false, features = ["png"]}
thiserror = "1.0"
rfd = "0.14"
creek = {version = "1.2.2", default-features = false, features = ["decode", "decode-all"]}
rubato = "*"

[profile.dev.package."*"]
opt-level = 3
